Corrected Donate section alignments

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 body {
-    margin: 0 85px;
-    /* width: 90vw; */
+    /* I didn't set left-right margin to "160px" because of my device width problem. I set that value to "100px", but still if I want to see it perfectly as your provided design, I have to see it at 90% zoom in my browser. Hope I will learn the solution as soon as possible. */
+    margin: 0 100px;
     background-color: #F1F1F3;
 }
 
@@ -178,6 +178,9 @@ body {
     padding: 0 80px;
     text-align: center;
     margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .amount{
@@ -198,7 +201,7 @@ body {
 .input-field{
     display: block;
     height: 64px;
-    width: 100%;
+    width: 93%;
     border: none;
     border-bottom: 2px solid rgba(14, 14, 14, 15%);
     text-align: center;
